Cleaning React Starter

--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "form-builder-on-react-starter",
+  "name": "stock-market-dashboard",
   "version": "1.0.0",
-  "description": "Build forms with src/formJSON.js.",
+  "description": "React-based stock market dashboard that visualizes a predefined set of stock market indexes from a 3rd party API. This is a project for the React Upskill course from the Telerik Academy.",
   "main": "./src/index.jsx",
-  "homepage": "https://jannden.gitlab.io/form-builder-on-react-starter",
+  "homepage": "https://jannden.gitlab.io/stock-market-dashboard",
   "scripts": {
-    "start": "set NODE_ENV=development&& webpack serve --config ./webpack.config.js --mode development",
-    "build": "set NODE_ENV=production&& webpack --config ./webpack.config.js --mode production",
+    "start": "set NODE_ENV=development&& webpack serve --config ./webpack.dev.js --mode development",
+    "build": "set NODE_ENV=production&& webpack --config ./webpack.prod.js --mode production",
     "test": "echo \"Error: no test specified\" && exit 1",
     "husky-test": "echo \"Welcome, this is Husky speaking...\"",
     "prepare": "husky install"
   },
-  "author": "JanNDen",
+  "author": "Jan Cibulka and Teya Andreeva",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.16.0",
