--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,10 +21,7 @@
     ],
     "rules": {
         "prettier/prettier": [
-            "error",
-            {
-                "endOfLine": "auto"
-            }
+            "error", { "endOfLine": "auto" }
         ],
         "quotes": [
             "error",
