--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": ["eslint --fix"]
   },
+  "husky": { 
+    "hooks": {
+        "pre-commit": "lint-staged"
+    }
+  },
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
