--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "husky": { 
     "hooks": {
-        "pre-commit": "lint-staged"
+      "pre-push": "echo \"[Husky] pre-push\"",
+      "pre-commit": "echo \"[Husky] pre-commit\""
     }
   },
   "devDependencies": {
