--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   },
   "husky": { 
     "hooks": {
-      "pre-push": "echo \"[Husky] pre-push\"",
-      "pre-commit": "echo \"[Husky] pre-commit\""
+      "pre-push": "echo \"[Husky] pre-push\""
     }
   },
   "devDependencies": {
