--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,44 +1,27 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true,
-        "node": true
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "node": true
+  },
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
     },
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "extends": [
-        "airbnb",
-        "prettier",
-        "plugin:react-hooks/recommended"
-    ],
-    "plugins": [
-        "prettier"
-    ],
-    "rules": {
-        "prettier/prettier": [
-            "error", { "endOfLine": "auto", "singleQuote": true }
-        ],
-        "quotes": [
-            "error",
-            "single"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ],
-        "linebreak-style": 0,
-        "no-console": 0,
-        "react/prop-types": 0,
-        "class-methods-use-this": 0,
-        "react/no-unused-class-component-methods": 0,
-        "comma-dangle": [
-            "error",
-            "only-multiline"
-        ]
-    }
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "extends": ["airbnb", "prettier", "plugin:react-hooks/recommended"],
+  "plugins": ["prettier"],
+  "rules": {
+    "prettier/prettier": "error",
+    "quotes": ["error", "single"],
+    "semi": ["error", "always"],
+    "linebreak-style": 0,
+    "no-console": 0,
+    "react/prop-types": 0,
+    "class-methods-use-this": 0,
+    "react/no-unused-class-component-methods": 0,
+    "comma-dangle": ["error", "only-multiline"]
+  }
 }
