--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
     "lint": "eslint ."
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint --fix"
-    ],
-    "**/*": "prettier --write --ignore-unknown"
+    "*.{js,jsx,ts,tsx}": ["prettier --write --ignore-unknown", "eslint --fix"]
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
