--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "lint": "eslint ."
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": ["prettier --write --ignore-unknown", "eslint --fix"],
-    "ignore": ["node_modules", ".husky", "dist", "package-lock.json"]
+    "*.{js,jsx,ts,tsx}": ["prettier --write --ignore-unknown", "eslint --fix"]
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
