--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,8 +14,8 @@
   "extends": ["airbnb", "prettier", "plugin:react-hooks/recommended"],
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": ["error", {"singleQuote": true, "endOfLine": "auto"}],
-    "quotes": ["error", "single"],
+    "prettier/prettier": ["error", {"endOfLine": "auto"}],
+    "quotes": ["error", "double"],
     "semi": ["error", "always"],
     "linebreak-style": 0,
     "no-console": 0,
