--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@material-ui/pickers": "^3.3.10",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.27.0",
+    "firebase": "^9.6.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
