--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
   "env": {
     "browser": true,
     "es2021": true,
-    "node": true
+    "node": true,
+    "jest/globals": true
   },
   "parserOptions": {
     "ecmaFeatures": {
@@ -12,10 +13,11 @@
     "sourceType": "module"
   },
   "extends": ["airbnb", "prettier", "plugin:react-hooks/recommended"],
-  "plugins": ["prettier"],
+  "plugins": ["prettier", "jest"],
   "rules": {
     "prettier/prettier": ["error", {"endOfLine": "auto"}],
     "quotes": ["error", "double"],
+    "import/no-extraneous-dependencies": "warn",
     "semi": ["error", "always"],
     "linebreak-style": 0,
     "no-console": 0,
