--- a/package.json
+++ b/package.json
@@ -64,16 +64,16 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.3.10",
+    "apexcharts": "^3.32.1",
     "bootstrap": "^5.1.3",
-    "date-fns": "^2.27.0",
     "firebase": "^9.6.1",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1",
-    "save": "^2.4.0"
+    "redux-thunk": "^2.4.1"
   }
 }
