--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "redux": "^4.1.2",
