--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "husky-test": "echo \"Welcome, this is Husky speaking...\"",
     "lint": "eslint --fix",
     "test": "jest",
-    "test:watch": "jest -watchAll",
+    "test:watch": "jest --watchAll",
     "test:coverage": "jest --coverage"
   },
   "lint-staged": {
@@ -56,6 +56,7 @@
     "prettier": "^2.4.1",
     "react-refresh": "^0.11.0",
     "react-test-renderer": "^17.0.2",
+    "redux-mock-store": "^1.5.4",
     "style-loader": "^3.3.1",
     "webpack": "^5.64.0",
     "webpack-cli": "^4.9.1",
