--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ REACT_APP_FIREBASE_MESSAGING_SENDER_ID=318843897158
 REACT_APP_FIREBASE_APP_ID=1:318843897158:web:28362b9552b1963991d147
 PUBLIC_BASENAME_PATH=/stock-market-dashboard
 ALPHA_VANTAGE=7GE00Y7LWEKFIIQS
+CYPRESS_BASE_URL=http://localhost:8080
