--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "lint": "eslint --fix",
     "test": "jest",
     "test:watch": "jest --watchAll",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "test:cypress": "start-server-and-test start http://localhost:8080 cypress",
+    "cypress": "cypress run"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -37,6 +39,7 @@
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.1",
+    "cypress": "^9.3.1",
     "dotenv-webpack": "^7.0.3",
     "enzyme": "^3.11.0",
     "eslint": "^8.2.0",
@@ -57,10 +60,11 @@
     "react-refresh": "^0.11.0",
     "react-test-renderer": "^17.0.2",
     "redux-mock-store": "^1.5.4",
+    "start-server-and-test": "^1.14.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.64.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.5.0"
+    "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
