--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ stages:
 javascript:
   stage: test
   script:
-    - "jest --ci --reporters=default --reporters=jest-junit"
+    - yarn testreport
   artifacts:
     when: always
     reports:
