--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "husky-test": "echo \"Welcome, this is Husky speaking...\"",
     "lint": "eslint --fix",
     "test": "jest",
+    "testreport": "jest --ci --reporters=default --reporters=jest-junit",
     "test:watch": "jest --watchAll",
     "test:coverage": "jest --coverage",
     "test:cypress": "start-server-and-test start http://localhost:8080 cypress",
@@ -55,6 +56,7 @@
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.0",
     "jest": "^27.4.5",
+    "jest-junit": "^13.0.0",
     "lint-staged": "^12.1.2",
     "prettier": "^2.4.1",
     "react-refresh": "^0.11.0",
