--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,8 @@ build:
     paths:
       - build/ # Save the build result as an artifact
 
-javascript:
+test:
+  image: node:latest # Run the job in a `node` docker image
   stage: test
   script:
     - yarn test:ci
