--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.3.10",
+    "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.32.1",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.1",
