--- a/.github/workflows/build_test_react.yml
+++ b/.github/workflows/build_test_react.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [16.x]
 
     steps:
     - uses: actions/checkout@v3
@@ -24,9 +24,9 @@ jobs:
 
     - name: Build
       run: |
-        npm install
-        npm build
+        yarn install
+        yarn build
         
     - name: Test
       run: |
-        npm test:ci
+        yarn test:ci
